--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
 <!-- Form -->
 <form method="get" name="Order">
-  <h2> Place You Order </h2> 
+  <h2> Place Your Order </h2> 
   <input type="checkbox" name="hotdogs"> Hot Dogs <input type="text" placeholder="Qty" name="hotdogs" id="hotdogs"> <br>
   <input type="checkbox" name="hotdogs"> French Fries <input type="text" placeholder="Qty" name="fries" id="fries"> <br>
   <input type="checkbox" name="hotdogs"> Drinks <input type="text" placeholder="Qty" name="drinks" id="drinks"> <br>
-  <button type="button" onclick=""> Odrer </button>
+  <button type="button" onclick=""> Order </button>
 </form>
 
 <script language="javascript">
