--- a/index.html
+++ b/index.html
@@ -17,8 +17,15 @@
 <!-- Form -->
 <form method="get" name="Order">
   <h2> Place Your Order </h2> 
-  <input type="checkbox" name="hotdogs"> Hot Dogs <input type="text" placeholder="Qty" name="hotdogs" id="hotdogs"> <br>
-  <input type="checkbox" name="hotdogs"> French Fries <input type="text" placeholder="Qty" name="fries" id="fries"> <br>
+  
+  <input type="checkbox" name="hotdogs"> 
+  Hot Dogs <input type="text" placeholder="Qty" name="hotdogs" id="hotdogs"> <br>
+  <input type="checkbox" name="hotdogs"> French Fries <input type="text" placeholder="Qty" name="fries" id="fries">
+  Price: 
+  <script language"javascript">
+    document.write("$" + document.getById("hotdogs").value * 3.25);
+  </script>
+  
   <input type="checkbox" name="hotdogs"> Drinks <input type="text" placeholder="Qty" name="drinks" id="drinks"> <br>
   <button type="button" onclick=""> Order </button>
 </form>
