--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <input type="checkbox" name="hotdogs"> French Fries <input type="text" placeholder="Qty" name="fries" id="fries">
   Price: 
   <script language"javascript">
-    document.write("$" + document.getById("hotdogs").value * 3.25);
+    document.write("$" + document.getElementById("hotdogs").value * 3.25);
   </script>
   
   <input type="checkbox" name="hotdogs"> Drinks <input type="text" placeholder="Qty" name="drinks" id="drinks"> <br>
