--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
     <script language"javascript">
     function GetIn() {
-      window.hprice = document.getElementById("hotdogs".value * 3.25);
-    document.write("$" + window.hprice);
+      hprice = document.getElementById("hotdogs".value * 3.25);
+      document.write("$" + hprice);
     }
   </script>
 <script language="javascript">
