--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <script language"javascript">
     function GetIn() {
-      hprice = document.getElementById("hotdogs".value * 3.25);
+      hprice = (document.getElementById("hotdogs").value * 3.25);
       document.write("$" + hprice);
     }
   </script>
