--- a/index.html
+++ b/index.html
@@ -20,10 +20,13 @@
   
   <input type="checkbox" name="hotdogs"> 
   Hot Dogs Qty <input type="text" placeholder="0" name="hotdogs" id="hotdogs"> <br>
-  <input type="checkbox" name="fries"> French Fries <input type="text" placeholder="Qty" name="fries" id="fries"> <br>
-  Price: 
+
+  <input type="checkbox" name="fries"> 
+  French Fries <input type="text" placeholder="0" name="fries" id="fries"> <br>
   
-  <input type="checkbox" name="drinks"> Drinks <input type="text" placeholder="Qty" name="drinks" id="drinks"> <br>
+  <input type="checkbox" name="drinks"> 
+  Drinks <input type="text" placeholder="0" name="drinks" id="drinks"> <br>
+  
   <button type="button" onclick="GetIn()"> Order </button>
 </form>
 
