--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
   <h2> Place Your Order </h2> 
   
   <input type="checkbox" name="hotdogs"> 
-  Hot Dogs Qty <input type="text" placeholder="0" name="hotdogs" id="hotdogs"> <br>
+  Hot Dogs Qty.<input type="text" placeholder="0" name="hotdogs" id="hotdogs"> <br>
 
   <input type="checkbox" name="fries"> 
-  French Fries <input type="text" placeholder="0" name="fries" id="fries"> <br>
+  French FriesQty. <input type="text" placeholder="0" name="fries" id="fries"> <br>
   
   <input type="checkbox" name="drinks"> 
-  Drinks <input type="text" placeholder="0" name="drinks" id="drinks"> <br>
+  Drinks Qty.<input type="text" placeholder="0" name="drinks" id="drinks"> <br>
   
   <button type="button" onclick="GetIn()"> Order </button>
 </form>
