--- a/index.html
+++ b/index.html
@@ -36,8 +36,11 @@
       window.hprice = (document.getElementById("hotdogs").value * 3.25);
       document.write("$" + window.hprice + "<br>");
   
-      window.fprice = (document.getElementById("fries").value * 2);
-      document.write("$" + window.fprice + "<br>");
+      window.hprice = (document.getElementById("hotdogs").value * 3.25);
+      document.write("$" + window.hprice + "<br>");
+      
+      //window.fprice = (document.getElementById("fries").value * 2);
+      //document.write("$" + window.fprice + "<br>");
       
       window.dprice = (document.getElementById("drinks").value * 1.50);
       document.write("$" + window.dprice + "<br>");
