--- a/index.html
+++ b/index.html
@@ -35,12 +35,9 @@
       window.Price = 0;
       window.hprice = (document.getElementById("hotdogs").value * 3.25);
       document.write("$" + window.hprice + "<br>");
-  
-      window.hprice = (document.getElementById("hotdogs").value * 3.25);
-      document.write("$" + window.hprice + "<br>");
       
-      //window.fprice = (document.getElementById("fries").value * 2);
-      //document.write("$" + window.fprice + "<br>");
+      window.fprice = (document.getElementById("fries").value * 2);
+      document.write("$" + window.fprice + "<br>");
       
       window.dprice = (document.getElementById("drinks").value * 1.50);
       document.write("$" + window.dprice + "<br>");
