--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
       window.Price = 0;
       window.hprice = (document.getElementById("hotdogs").value * 3.25);
       document.write("$" + window.hprice + "<br>");
+      document.write(document.getElementById("hotdogs").value);
+      document.write(document.getElementById("fries").value);
       
       window.fprice = (document.getElementById("fries").value * 2);
       document.write("$" + window.fprice + "<br>");
