--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       window.Price = 0;
       window.hprice = (document.getElementById("hotdogs").value * 3.25);
       document.write("$" + window.hprice + "<br>");
-      document.write(document.getElementById("hotdogs").value);
+      document.write(window.hprice);
       document.write(document.getElementById("fries").value);
       
       window.fprice = (document.getElementById("fries").value * 2);
