--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <script language"javascript">
     function GetIn() {
-      var window.Price = 0;
+      window.Price = 0;
       window.hprice = (document.getElementById("hotdogs").value * 3.25);
       document.write("$" + window.hprice + "<br>");
       document.write(window.hprice);
