--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
 
     <script language"javascript">
     function GetIn() {
+      window.hdog = document.getElementById("hotdogs").value;
+      window.fries = document.getElementById("fries").value;
+    }
+      /*
       window.Price = 0;
 
       window.fprice = (document.getElementById("fries").value * 2);
@@ -47,7 +51,7 @@
       document.write("$" + window.dprice + "<br>");
       
       document.write("OOF: " + window.Price);
-    }
+    }*/
   </script>
 
 </body>
