--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     function GetIn() {
       window.hdog = document.getElementById("hotdogs").value;
       window.fries = document.getElementById("fries").value;
+      document.write("hdog: " + window.hdog + "<br> fries: " + window.fries); 
     }
       /*
       window.Price = 0;
