--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
 
     <script language"javascript">
     function GetIn() {
-      window.hdog = document.getElementById("hotdogs").value;
+      window.hotdogs = document.getElementById("hotdogs").value;
       window.fries = document.getElementById("fries").value;
+      window.drinks = document.getElementById("drinks").value;
       document.write("hdog: " + window.hdog + "<br> fries: " + window.fries); 
     }
       /*
