--- a/index.html
+++ b/index.html
@@ -32,17 +32,10 @@
 
     <script language"javascript">
     function GetIn() {
-      window.hprice = document.getElementById("hotdogs").value;
-      document.write("$" + window.hprice + "<br>");
-
-      window.fprice = document.getElementById("fries").value;
-      document.write("$" + window.fprice + "<br>");
-
+      window.hotdogs = document.getElementById("hotdogs").value;
+      window.fries = document.getElementById("fries").value;
       window.drinks = document.getElementById("drinks").value;
-      document.dprice("$" + window.dprice + "<br>");
-        
-      
-      document.write("hdog: " + window.hotdogs + "<br> fries: " + window.fries); 
+      document.write("hdog: " + window.hdog + "<br> fries: " + window.fries); 
     }
       /*
       window.Price = 0;
