--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       window.hotdogs = document.getElementById("hotdogs").value;
       window.fries = document.getElementById("fries").value;
       window.drinks = document.getElementById("drinks").value;
-      document.write("hdog: " + window.hdog + "<br> fries: " + window.fries); 
+      document.write("hdog: " + window.hotdogs + "<br> fries: " + window.fries); 
     }
       /*
       window.Price = 0;
