--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       window.hotdogs = document.getElementById("hotdogs").value;
       window.fries = document.getElementById("fries").value;
       window.drinks = document.getElementById("drinks").value;
-      document.write("hdog: " + window.hotdogs + "<br> fries: " + window.fries+ "<br> drinks: " + window.drinks); 
+      document.write("hdog: " + (window.hotdogs *2) + "<br> fries: " + window.fries+ "<br> drinks: " + window.drinks); 
     }
       /*
       window.Price = 0;
