--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 
     <script language"javascript">
     function GetIn() {
-      window.hotdogs = document.getElementById("hotdogs").value;
-      window.fries = document.getElementById("fries").value;
+      window.hprice = document.getElementById("hotdogs").value;
+      window.fprice = document.getElementById("fries").value;
       window.drinks = document.getElementById("drinks").value;
-      document.write("hdog: " + (window.hotdogs *2) + "<br> fries: " + window.fries+ "<br> drinks: " + window.drinks); 
+      document.write("hdog: " + (window.hprice * 2) + "<br> fries: " + window.fprice+ "<br> drinks: " + window.drinks); 
     }
       /*
       window.Price = 0;
