--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     function GetIn() {
       window.hprice = document.getElementById("hotdogs").value;
       window.fprice = document.getElementById("fries").value;
-      window.drinks = document.getElementById("drinks").value;
-      document.write("hdog: " + (window.hprice * 2) + "<br> fries: " + window.fprice+ "<br> drinks: " + window.drinks); 
+      window.dprice = document.getElementById("drinks").value;
+      document.write("hdog: " + (window.hprice * 2) + "<br> fries: " + window.fprice+ "<br> drinks: " + window.dprice); 
     }
       /*
       window.Price = 0;
