--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
       window.hprice = document.getElementById("hotdogs").value;
       window.fprice = document.getElementById("fries").value;
       window.dprice = document.getElementById("drinks").value;
-      document.write("hdog: " + (window.hprice * 2) + "<br> fries: " + window.fprice+ "<br> drinks: " + window.dprice); 
+      document.write("hdog: " + (window.hprice * 3.25) + 
+                     "<br> fries: " + (window.fprice * 2) + 
+                     "<br> drinks: " + (window.dprice * 1.5); 
     }
       /*
       window.Price = 0;
