--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       window.dprice = document.getElementById("drinks").value;
       document.write("hdog: " + (window.hprice * 3.25) + 
                      "<br> fries: " + (window.fprice * 2) + 
-                     "<br> drinks: " + (window.dprice * 1.5); 
+                     "<br> drinks: " + (window.dprice * 1.5)); 
     }
       /*
       window.Price = 0;
