--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
   
 <h1> Joe's Hotdog Stand </h1>  
 
+<script language="javascript">
+  document.write('<form> method="get" name="Order"> <h2> Place Your Order </h2> </form>')
+  
+</script>
+  
+<br><br><br><br><br><br><br><br><br>
 <!-- Form -->
 <form method="get" name="Order">
   <h2> Place Your Order </h2> 
@@ -31,6 +37,8 @@
 </form>
 
     <script language"javascript">
+    
+    /*
     function GetIn() {
       window.hprice = document.getElementById("hotdogs").value;
       window.fprice = document.getElementById("fries").value;
@@ -38,7 +46,7 @@
       document.write("hdog: " + (window.hprice * 3.25) + 
                      "<br> fries: " + (window.fprice * 2) + 
                      "<br> drinks: " + (window.dprice * 1.5)); 
-    }
+    }*/
       /*
       window.Price = 0;
 
