--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <h1> Joe's Hotdog Stand </h1>  
 
 <script language="javascript">
-  document.write('<form> method="get" name="Order"> <h2> Place Your Order </h2> </form>')
+  document.write('<form method="get" name="Order"> <h2> Place Your Order </h2> </form>')
   
 </script>
   
