--- a/index.html
+++ b/index.html
@@ -15,7 +15,18 @@
 <h1> Joe's Hotdog Stand </h1>  
 
 <script language="javascript">
-  document.write('<form method="get" name="Order"> <h2> Place Your Order </h2> </form>')
+  var prices = new Object();
+  var quantity = new Object();
+  prices["Hotdogs" = 3.25];
+  prices["French Fries" = 2];
+  prices["Drinks" = 1.50];
+  
+  document.write('<form method="get" name="Order"> <h2> Place Your Order </h2>')
+  for (var i in prices)
+  {
+    document.write(i + ' Qty. <input type="text placeholder="0" name="' + i '" id="hotdogs"> <br>')
+  }
+  document.write('</form>')
   
 </script>
   
