--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <script language="javascript">
   var prices = new Object();
   var quantity = new Object();
-  prices["Hotdogs" = 3.25];
+  prices['Hotdogs' = 3.25];
   prices["French Fries" = 2];
   prices["Drinks" = 1.50];
   
