--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   var prices = new Object();
   var quantity = new Object();
   prices[Hotdogs = 3.25];
-  prices[French-Fries = 2];
+  prices[Fries = 2];
   prices[Drinks = 1.50];
   
   document.write('<form method="get" name="Order"> <h2> Place Your Order </h2>')
