--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   document.write('<form method="get" name="Order"> <h2> Place Your Order </h2>')
   for (var i in prices)
   {
-    document.write(i + ' Qty. <input type="text placeholder="0" name="' + i '" id="hotdogs"> <br>')
+    document.write(i + ' Qty. <input type="text" placeholder="0" name="' + i '" id="hotdogs"> <br>')
   }
   document.write('</form>')
   
