--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     document.write(i + ' Qty. <input type="text" placeholder="0" id="hotdogs"> <br>')
   }
   document.write('</form>')
-  
+  document.write("OOF")
 </script>
   
 <br><br><br><br><br><br><br><br><br>
-<!-- Form -->
+<!-- Form 
 <form method="get" name="Order">
   <h2> Place Your Order </h2> 
   
@@ -46,7 +46,7 @@
   
   <button type="button" onclick="GetIn()"> Order </button>
 </form>
-
+-->
     <script language"javascript">
     
     /*
