--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
   prices[Fries = 2];
   prices[Drinks = 1.50];
   
-  document.write('<form method="get" name="Order"> <h2> Place Your Order </h2>')
+  document.write("<form method='get' name='Order'> <h2> Place Your Order </h2>")
   for (var i in prices)
   {
-    document.write(i + ' Qty. <input type="text" placeholder="0" id="hotdogs"> <br>')
+    document.write(i + " Qty. <input type='text' placeholder='0' id='hotdogs'> <br>")
   }
-  document.write('</form>')
+  document.write("</form>")
   document.write("OOF")
 </script>
   
