--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
   prices[Fries = 2];
   prices[Drinks = 1.50];
   
+  document.write("OOF")
   document.write("<form method='get' name='Order'> <h2> Place Your Order </h2>")
+  document.write("LOL")
   for (var i in prices)
   {
     document.write(i + " Qty. <input type='text' placeholder='0' id='hotdogs'> <br>")
