--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   prices[Drinks = 1.50];
   
   document.write("OOF")
-  document.write("<form><input type='text'><h1>Hello World!</h1></form>")
+  document.write("<form method='get' name='Order'> <h2> Place Your Order </h2> <input type='text'><h1>Hello World!</h1></form>")
   document.write("<form method='get' name='Order'> <h2> Place Your Order </h2>")
   document.write("LOL")
   for (var i in prices)
