--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
   
   document.write("OOF")
   document.write("<form method='get' name='Order'> <h2> Place Your Order </h2> <input type='text'><h1>Hello World!</h1></form>")
-  document.write("<form method='get' name='Order'> <h2> Place Your Order </h2>")
+  for (var i in prices) {
+     document.write(i)
+  }
   document.write("LOL")
   for (var i in prices)
   {
