--- a/index.html
+++ b/index.html
@@ -21,18 +21,19 @@
   prices[Fries = 2];
   prices[Drinks = 1.50];
   
-  document.write("OOF")
-  document.write("<form method='get' name='Order'> <h2> Place Your Order </h2> <input type='text'><h1>Hello World!</h1></form>")
+  document.write("OOF");
+  document.write("<form method='get' name='Order'> <h2> Place Your Order </h2> <input type='text'><h1>Hello World!</h1></form>");
+  document.write(i);
   for (var i in prices) {
-     document.write(i)
+     document.write(i);
   }
   document.write("LOL")
-  for (var i in prices)
+  for (var i in prices);
   {
-    document.write(i + " Qty. <input type='text' placeholder='0' id='hotdogs'> <br>")
+    document.write(i + " Qty. <input type='text' placeholder='0' id='hotdogs'> <br>");
   }
-  document.write("</form>")
-  document.write("OOF")
+  document.write("</form>");
+  document.write("OOF");
 </script>
   
 <br><br><br><br><br><br><br><br><br>
