--- a/index.html
+++ b/index.html
@@ -20,18 +20,19 @@
   prices[Hotdogs = 3.25];
   prices[Fries = 2];
   prices[Drinks = 1.50];
-  
-  document.write("OOF");
-  document.write("<form method='get' name='Order'> <h2> Place Your Order </h2> <input type='text'><h1>Hello World!</h1></form>");
-  document.write(i);
-  for (var i in prices) {
+  var i;
+  for (i in prices) {
      document.write(i);
   }
   document.write("LOL")
   for (var i in prices);
   {
     document.write(i + " Qty. <input type='text' placeholder='0' id='hotdogs'> <br>");
-  }
+  }  
+  document.write("OOF");
+  document.write("<form method='get' name='Order'> <h2> Place Your Order </h2> <input type='text'><h1>Hello World!</h1></form>");
+  document.write(i);
+
   document.write("</form>");
   document.write("OOF");
 </script>
