--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 <h1> Joe's Hotdog Stand </h1>  
 
 <script language="javascript">
-  var prices = new Object();
+  var prices = {Hotdogs: 3.25, Fries: 2, Drinks:1.5}; 
   var quantity = new Object();
-  prices[Hotdogs = 3.25];
+/*  prices[Hotdogs = 3.25];
   prices[Fries = 2];
-  prices[Drinks = 1.50];
+  prices[Drinks = 1.50];*/
   var i;
   for (i in prices) {
      document.write(i);
