--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   prices[Drinks = 1.50];*/
   var i;
   document.write("LOL")
-  for (var i in prices);
+  for (var i in prices)
   {
     document.write(i + " Qty. <input type='text' placeholder='0' id='hotdogs'> <br>");
   }  
