--- a/index.html
+++ b/index.html
@@ -18,16 +18,15 @@
   var prices = {Hotdogs: 3.25, Fries: 2, Drinks:1.5}; 
   var quantity = new Object();
   var i;
+  document.write("<form method='get' name='Order'> <h2> Place Your Order </h2> <input type='text'><h1>Hello World!</h1></form>");
   for (var i in prices)
   {
     document.write(i + " Qty. <input type='text' placeholder='0' id='" + i + "'> <br>");
   }  
-  document.write("OOF");
-  document.write("<form method='get' name='Order'> <h2> Place Your Order </h2> <input type='text'><h1>Hello World!</h1></form>");
-  document.write(i);
+  document.write(<button type="button" onclick="GetIn()"> Order </button>);
+
 
   document.write("</form>");
-  document.write("OOF");
 </script>
   
 <br><br><br><br><br><br><br><br><br>
