--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   {
     document.write(i + " Qty. <input type='text' placeholder='0' id='" + i + "'> <br>");
   }  
-  document.write(<button type="button" onclick="GetIn()"> Order </button>);
+  document.write("<button type="button" onclick="GetIn()"> Order </button>");
 
 
   document.write("</form>");
