--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   {
     document.write(i + " Qty. <input type='text' placeholder='0' id='" + i + "'> <br>");
   }  
-  document.write("<button type="button" onclick="GetIn()"> Order </button>");
+  document.write("<button type='button' onclick='GetIn()'> Order </button>");
 
 
   document.write("</form>");
@@ -48,15 +48,14 @@
 -->
     <script language"javascript">
     
-    /*
     function GetIn() {
-      window.hprice = document.getElementById("hotdogs").value;
-      window.fprice = document.getElementById("fries").value;
-      window.dprice = document.getElementById("drinks").value;
+      window.hprice = document.getElementById("Hotdogs").value;
+      window.fprice = document.getElementById("Fries").value;
+      window.dprice = document.getElementById("Drinks").value;
       document.write("hdog: " + (window.hprice * 3.25) + 
                      "<br> fries: " + (window.fprice * 2) + 
                      "<br> drinks: " + (window.dprice * 1.5)); 
-    }*/
+    }
       /*
       window.Price = 0;
 
