--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   var prices = {Hotdogs: 3.25, Fries: 2, Drinks:1.5}; 
   var quantity = new Object();
   var i;
-  document.write("<form method='get' name='Order'> <h2> Place Your Order </h2> <input type='text'><h1>Hello World!</h1></form>");
+  document.write("<form method='get' name='Order'> <h2> Place Your Order </h2>");
   for (var i in prices)
   {
     document.write(i + " Qty. <input type='text' placeholder='0' id='" + i + "'> <br>");
