--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </script>
   
 <br><br><br><br><br><br><br><br><br>
-<!-- Form 
+<!-- Form --> 
 <form method="get" name="Order">
   <h2> Place Your Order </h2> 
   
@@ -45,7 +45,7 @@
   
   <button type="button" onclick="GetIn()"> Order </button>
 </form>
--->
+
     <script language"javascript">
     
     function GetIn() {
