--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 
 <script language="javascript">
   var prices = {Hotdogs: 3.25, Fries: 2, Drinks:1.5}; 
-  var quantity = new Object();
   var i;
   document.write("<form method='get' name='Order'> <h2> Place Your Order </h2>");
   for (var i in prices)
@@ -24,8 +23,6 @@
     document.write(i + " Qty. <input type='text' placeholder='0' id='" + i + "'> <br>");
   }  
   document.write("<button type='button' onclick='GetIn()'> Order </button>");
-
-
   document.write("</form>");
 </script>
 <!--  
@@ -45,16 +42,21 @@
   <button type="button" onclick="GetIn()"> Order </button>
 </form>
 -->
-    <script language"javascript">
-    
-    function GetIn() {
-      window.hprice = document.getElementById("Hotdogs").value;
-      window.fprice = document.getElementById("Fries").value;
-      window.dprice = document.getElementById("Drinks").value;
-      document.write("hdog: " + (window.hprice * 3.25) + 
-                     "<br> fries: " + (window.fprice * 2) + 
-                     "<br> drinks: " + (window.dprice * 1.5)); 
-    }
+<script language"javascript">    
+  function GetIn() {
+    var quantity = {Hotdogs: document.getElementById("Hotdogs").value,
+                    Fries: document.getElementById("Fries").value,
+                    Drinks: document.getElementById("Drinks").value};
+    document.write(quantity);
+  }
+    /*
+    window.hprice = document.getElementById("Hotdogs").value;
+    window.fprice = document.getElementById("Fries").value;
+    window.dprice = document.getElementById("Drinks").value;
+    document.write("hdog: " + (window.hprice * 3.25) + 
+                   "<br> fries: " + (window.fprice * 2) + 
+                   "<br> drinks: " + (window.dprice * 1.5)); 
+  } */
       /*
       window.Price = 0;
 
