--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     Drinks: document.getElementById("Drinks").value};
     
     for (var i in quantity) {
-      document.write(quantity.Hotdogs);
+      document.write(quantity.i);
     }
   }
     /*
