--- a/index.html
+++ b/index.html
@@ -47,9 +47,7 @@
     var quantity = {Hotdogs: document.getElementById("Hotdogs").value,
                     Fries: document.getElementById("Fries").value,
                     Drinks: document.getElementById("Drinks").value};
-    
-    for (var i in quantity) {
-      document.write(i[i]);
+    documnet.write(quantity.Hotdogs + quantity.Fries + quantity.Drinks);
     }
   }
     /*
