--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     var quantity = {Hotdogs: document.getElementById("Hotdogs").value,
                     Fries: document.getElementById("Fries").value,
                     Drinks: document.getElementById("Drinks").value};
-    documnet.write(quantity.Hotdogs + quantity.Fries + quantity.Drinks);
+    document.write(quantity.Hotdogs + quantity.Fries + quantity.Drinks);
   }
     /*
     window.hprice = document.getElementById("Hotdogs").value;
