--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 -->
 <script language"javascript">    
   function GetIn() {
-    var window.quantity = {Hotdogs: document.getElementById("Hotdogs").value,
-                    Fries: document.getElementById("Fries").value,
-                    Drinks: document.getElementById("Drinks").value};
+    window.quantity = {Hotdogs: document.getElementById("Hotdogs").value,
+                       Fries: document.getElementById("Fries").value,
+                       Drinks: document.getElementById("Drinks").value};
     document.write(window.quantity.Hotdogs + window.quantity.Fries + window.quantity.Drinks);
   }
   
