--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   
   function Calc() {
     var subtotal = 0;
-    document.write("Hotdogs Qty. = " + window.quantity.Hotdogs + ", Price = " + window.prices.Hotdogs + " each, --> "
+    document.write("Hotdogs Qty. = " + window.quantity.Hotdogs + ", Price = " + window.prices.Hotdogs + " each, "
                    (window.quantity.Hotdogs * window.prices.Hotdogs));
   }
     /*
