--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
   
   function Calc() {
     var subtotal = 0;
-    document.write("Hotdogs Qty. = " + window.quantity.Hotdogs + ", Price = " + window.prices.Hotdogs + " each, Hotdogs Total = "
-                   (window.quantity.Hotdogs * window.prices.Hotdogs));
+    document.write("Hotdogs Qty. = " + window.quantity.Hotdogs + ", Price = " + window.prices.Hotdogs + 
+                   " each, Hotdogs Total = " + (window.quantity.Hotdogs * window.prices.Hotdogs));
   }
     /*
     window.hprice = document.getElementById("Hotdogs").value;
