--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     window.subtotal = parseFloat(window.quantity.Hotdogs * window.prices.Hotdogs) + 
                       parseFloat(window.quantity.Fries * window.prices.Fries) +
                       parseFloat(window.quantity.Drinks * window.prices.Drinks);
-    document.write(window.subtotal);
+    document.write("Subtotal = " + window.subtotal);
   }
 
   </script>
