--- a/index.html
+++ b/index.html
@@ -42,7 +42,12 @@
                       parseFloat(window.quantity.Fries * window.prices.Fries) +
                       parseFloat(window.quantity.Drinks * window.prices.Drinks);
     document.write("Subtotal = " + window.subtotal);
+    window.total = window.subtotal * 1.0625;
+    document.write(window.total);
   }
+  
+  function Tax() {
+    
 
   </script>
 
