--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                       parseFloat(window.quantity.Drinks * window.prices.Drinks);
     document.write("Subtotal = " + window.subtotal);
     window.total = window.subtotal * 1.0625;
-    window.total = windw.total.toFixed(2);
+    window.total = window.total.toFixed(2);
     document.write(window.total);
   }
   
