--- a/index.html
+++ b/index.html
@@ -41,10 +41,9 @@
     window.subtotal = parseFloat(window.quantity.Hotdogs * window.prices.Hotdogs) + 
                       parseFloat(window.quantity.Fries * window.prices.Fries) +
                       parseFloat(window.quantity.Drinks * window.prices.Drinks);
-    document.write("Subtotal = " + window.subtotal);
+    document.write("Subtotal = " + window.subtotal.toFixed(2) + "<br>");
     window.total = window.subtotal * 1.0625;
-    window.total = window.total.toFixed(2);
-    document.write(window.total);
+    document.write(window.total.toFixed(2));
   }
   
   function Tax() {
