--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     if (window.subtotal.toFixed(2) >= 20) {
       alert("Congratulations! Because your subtotal comes out to $20 or more you qualify for a 10% discount!");
       window.discount = window.subtotal * .9;
-      document.write("Discount applied: -" (window.subtotal - window.discount).toFixed(2) + "<br>";              
+      document.write("Discount applied: -" (window.subtotal - window.discount).toFixed(2) + "<br>");              
     }
     window.total = window.subtotal * 1.0625;
     document.write("Tax = $" + (window.total.toFixed(2) - window.subtotal.toFixed(2)) + "<br>");
