--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
   }
   
   function Calc() {
-    document.write("Hotdogs Qty. = " + window.quantity.Hotdogs + ", Price = " + window.prices.Hotdogs + 
-                   " each, Hotdogs Total = " + (window.quantity.Hotdogs * window.prices.Hotdogs) + "<br>");
-    document.write("Fries Qty. = " + window.quantity.Fries + ", Price = " + window.prices.Fries + 
-                   " each, Fries Total = " + (window.quantity.Fries * window.prices.Fries) + "<br>");
-    document.write("Drinks Qty. = " + window.quantity.Drinks + ", Price = " + window.prices.Drinks + 
-                   " each, Drinks Total = " + (window.quantity.Drinks * window.prices.Drinks) + "<br>");
+    document.write("Hotdogs Qty. = " + window.quantity.Hotdogs + ", Price = $" + window.prices.Hotdogs + 
+                   " each, Hotdogs Total = $" + (window.quantity.Hotdogs * window.prices.Hotdogs) + "<br>");
+    document.write("Fries Qty. = " + window.quantity.Fries + ", Price = $" + window.prices.Fries + 
+                   " each, Fries Total = $" + (window.quantity.Fries * window.prices.Fries) + "<br>");
+    document.write("Drinks Qty. = " + window.quantity.Drinks + ", Price = $" + window.prices.Drinks + 
+                   " each, Drinks Total = $" + (window.quantity.Drinks * window.prices.Drinks) + "<br>");
     window.subtotal = parseFloat(window.quantity.Hotdogs * window.prices.Hotdogs) + 
                       parseFloat(window.quantity.Fries * window.prices.Fries) +
                       parseFloat(window.quantity.Drinks * window.prices.Drinks);
@@ -52,7 +52,7 @@
     } 
     else {
       window.total = window.subtotal * 1.0625;
-      document.write("Tax = $" + ((window.total.toFixed(2)) - (window.subtotal.toFixed(2))) + "<br>");
+      document.write("Tax = $" + (window.total - window.subtotal).toFixed(2) + "<br>");
       document.write("Total = " + window.total.toFixed(2));
     }
   }
