--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   }
   
   function Calc() {
-    document.write("Hotdogs Qty. = " + window.quantity.Hotdogs + ", Price = $" + window.prices.Hotdogs + 
+    document.write("Hotdogs Qty. = " + window.quantity.Hotdogs + ", Price = $" + window.prices.Hotdogs.toFixed(2) + 
                    " each, Hotdogs Total = $" + (window.quantity.Hotdogs * window.prices.Hotdogs) + "<br>");
     document.write("Fries Qty. = " + window.quantity.Fries + ", Price = $" + window.prices.Fries + 
                    " each, Fries Total = $" + (window.quantity.Fries * window.prices.Fries) + "<br>");
