--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
   }
   
   function Calc() {
-    document.write("Hotdogs Qty. = " + window.quantity.Hotdogs + ", Price = $" + window.prices.Hotdogs.toFixed(2) + 
-                   " each, Hotdogs Total = $" + (window.quantity.Hotdogs * window.prices.Hotdogs) + "<br>");
-    document.write("Fries Qty. = " + window.quantity.Fries + ", Price = $" + window.prices.Fries + 
+    document.write("Hotdogs Qty. = " + window.quantity.Hotdogs + ", Price = $" + window.prices.Hotdogs + 
+                   " each, Hotdogs Total = $" + (window.quantity.Hotdogs * window.prices.Hotdogs).toFixed(2) + "<br>");
+    document.write("Fries Qty. = " + window.quantity.Fries + ", Price = $" + window.prices.Fries.toFixed(2) + 
                    " each, Fries Total = $" + (window.quantity.Fries * window.prices.Fries) + "<br>");
     document.write("Drinks Qty. = " + window.quantity.Drinks + ", Price = $" + window.prices.Drinks + 
                    " each, Drinks Total = $" + (window.quantity.Drinks * window.prices.Drinks) + "<br>");
@@ -48,12 +48,12 @@
       document.write("Discount applied: -" + (window.subtotal - window.discounted).toFixed(2) + "<br>");
       window.total = window.discounted * 1.0625;
       document.write("Tax = $" + (window.total.toFixed(2) - window.discounted.toFixed(2)) + "<br>");
-      document.write("Total = " + window.total.toFixed(2)); 
+      document.write("Total = $" + window.total.toFixed(2)); 
     } 
     else {
       window.total = window.subtotal * 1.0625;
       document.write("Tax = $" + (window.total - window.subtotal).toFixed(2) + "<br>");
-      document.write("Total = " + window.total.toFixed(2));
+      document.write("Total = $" + window.total.toFixed(2));
     }
   }
   
