--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
   }
   
   function Calc() {
-    document.write("Hotdogs Qty. = " + window.quantity.Hotdogs + ", Price = $" + window.prices.Hotdogs + 
+    document.write("Hotdogs Qty. = " + window.quantity.Hotdogs + ", Price = $" + window.prices.Hotdogs.toFixed(2) + 
                    " each, Hotdogs Total = $" + (window.quantity.Hotdogs * window.prices.Hotdogs).toFixed(2) + "<br>");
     document.write("Fries Qty. = " + window.quantity.Fries + ", Price = $" + window.prices.Fries.toFixed(2) + 
-                   " each, Fries Total = $" + (window.quantity.Fries * window.prices.Fries) + "<br>");
-    document.write("Drinks Qty. = " + window.quantity.Drinks + ", Price = $" + window.prices.Drinks + 
-                   " each, Drinks Total = $" + (window.quantity.Drinks * window.prices.Drinks) + "<br>");
+                   " each, Fries Total = $" + (window.quantity.Fries * window.prices.Fries).toFixed(2) + "<br>");
+    document.write("Drinks Qty. = " + window.quantity.Drinks + ", Price = $" + window.prices.Drinks.toFixed(2) + 
+                   " each, Drinks Total = $" + (window.quantity.Drinks * window.prices.Drinks).toFixed(2) + "<br>");
     window.subtotal = parseFloat(window.quantity.Hotdogs * window.prices.Hotdogs) + 
                       parseFloat(window.quantity.Fries * window.prices.Fries) +
                       parseFloat(window.quantity.Drinks * window.prices.Drinks);
