--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     window.subtotal = parseFloat(window.quantity.Hotdogs * window.prices.Hotdogs) + 
                       parseFloat(window.quantity.Fries * window.prices.Fries) +
                       parseFloat(window.quantity.Drinks * window.prices.Drinks);
-    document.write("Subtotal = " + window.subtotal.toFixed(2) + "<br>");
+    document.write("Subtotal = $" + window.subtotal.toFixed(2) + "<br>");
     if (window.subtotal.toFixed(2) >= 20) {
       alert("Congratulations! Because your subtotal comes out to $20 or more you qualify for a 10% discount!");
       window.discounted = window.subtotal * .9;
