--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
       alert("Congratulations! Because your subtotal comes out to $20 or more you qualify for a 10% discount!");
       window.discounted = window.subtotal * .9;
       document.write("Discount applied: -" + (window.subtotal - window.discounted).toFixed(2) + "<br>");
+      document.write("New Subtotal = $" + window.discounted.toFixed(2));
       window.total = window.discounted * 1.0625;
-      document.write("Tax = $" + (window.total.toFixed(2) - window.discounted.toFixed(2)) + "<br>");
+      document.write("Tax = $" + (window.total - window.discounted).toFixed(2) + "<br>");
       document.write("Total = $" + window.total.toFixed(2)); 
     } 
     else {
