--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     if (window.subtotal.toFixed(2) >= 20) {
       alert("Congratulations! Because your subtotal comes out to $20 or more you qualify for Joe's special 10% discount!");
       window.discounted = window.subtotal * .9;
-      document.write("Discount applied: - " + (window.subtotal - window.discounted).toFixed(2) + "<br>");
+      document.write("Discount applied: - $" + (window.subtotal - window.discounted).toFixed(2) + "<br>");
       document.write("New Subtotal = $" + window.discounted.toFixed(2) + "<br>");
       window.total = window.discounted * 1.0625;
       document.write("Tax = $" + (window.total - window.discounted).toFixed(2) + "<br>");
