--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   //Calculate Prices
   function Calc() {
     document.write("<table> <tr> <th> Item </th> <th> Quantity </th> <th> Price </th> <th> Total </th> </tr>");
-    dpcument.write("<tr> <td> Hotdogs </td> <td>" + window.quantity.Hotdogs + "</td> <td> $" + window.prices.Hotdogs.toFixed(2)
+    document.write("<tr> <td> Hotdogs </td> <td>" + window.quantity.Hotdogs + "</td> <td> $" + window.prices.Hotdogs.toFixed(2)
                    + "</td> <td> " + (window.quantity.Hotdogs * window.prices.Hotdogs).toFixed(2) + "</td> </tr>");
     document.write("</table>");
     document.write("Hotdogs Qty. = " + window.quantity.Hotdogs + ", Price = $" + window.prices.Hotdogs.toFixed(2) + 
