--- a/index.html
+++ b/index.html
@@ -11,13 +11,17 @@
   form {
     display: block;
     border: 1px solid #000;
+    width: 25%;
+    padding: 1em;
     margin-left: auto;
-    margin-right: auto;
+    margin-right: auto; 
   }
   
   table {
     display: block;
     border: 1px solid #000;
+    width: 50%;
+    padding: 1em;
     margin-left: auto;
     margin-right: auto;
   }
