--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     border: 1px solid #000;
     width: 25%;
     padding: 1em;
+    padding-top: .5em;
     margin-left: auto;
     margin-right: auto; 
   }
@@ -22,8 +23,10 @@
     border: 1px solid #000;
     width: 50%;
     padding: 1em;
-    margin-left: auto;
-    margin-right: auto;
+    position: absolute;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%)
   }
     
   
