--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     margin-right: auto; 
   }
   
+  button {
+    color: #66ff33;
+  }
+  
   table {
     display: block;
     border: 1px solid #000;
