--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
   
   button {
     background-color: #66ff33;
-    margin-left: auto;
-    margin-right: auto; 
-  }
+text-align: right;  }
   
   table {
     display: block;
