--- a/index.html
+++ b/index.html
@@ -2,40 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<style>
-  
-  h1,h2 {
-  text-align: center
-  }
-  
-  form {
-    display: block;
-    border: 1px solid #000;
-    width: 25%;
-    padding: 1em;
-    padding-top: .5em;
-    margin-left: auto;
-    margin-right: auto; 
-  }
-  
-  button {
-    margin-top: 1em;
-    background-color: #66ff33;
-  }
-  
-  table {
-    display: block;
-    border: 1px solid #000;
-    width: 50%;
-    padding: 1em;
-    position: absolute;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%)
-  }
-    
-  
-</style>
+<link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
   
