--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html>
 <head>
+<style>
+  h1 {
+    text-align: center;
+  }
+
+  h2 {
+    text-align: center;
+  }  
+</style>
 <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
