--- a/index.html
+++ b/index.html
@@ -1,17 +1,14 @@
 <!doctype html>
 <html>
 <head>
-<style>
-  h1 {
-    text-align: center;
-  }
-
-  h2 {
-    text-align: center;
-  }  
-</style>
 <meta charset="utf-8">
-<link rel="stylesheet" type="text/css" href="stylesheet.css">
+<style>
+  
+  h1, h2 {
+  text-align: center;
+  }
+  
+</style>
 </head>
 <body>
   
@@ -25,13 +22,8 @@
   for (var i in prices){
     document.write(i + " Qty. <br> <input type='text' placeholder='0' id='" + i + "'> <br>");
   }  
-  document.write("<button type='button' onclick='LinkSheet();GetIn();Calc();'> Order </button>");
+  document.write("<button type='button' onclick='GetIn();Calc();'> Order </button>");
   document.write("</form>");
-  
-  //Link CSS Stylesheet
-  function LinkSheet() {
-    document.write("<link rel='stylesheet' type='text/css' href='stylesheet.css'>");
-  }
   //Take in Input
   function GetIn() {
     window.quantity = {Hotdogs: document.getElementById("Hotdogs").value,
