--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
   
   //Calculate Prices
   function Calc() {
+    document.write("<link rel='stylesheet' type='text/css' href='stylesheet.css'>");
     document.write("<table> <tr> <th> Item </th> <th> Quantity </th> <th> Price </th> <th> Total </th> </tr>");
     document.write("<tr> <td> Hotdogs </td> <td>" + window.quantity.Hotdogs + "</td> <td> $" + window.prices.Hotdogs.toFixed(2)
                    + "</td> <td> " + (window.quantity.Hotdogs * window.prices.Hotdogs).toFixed(2) + "</td> </tr>");
