--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+<link rel="stylesheet" type="text/css" href="stylesheet.css">
 <style>
   h1 {
     text-align: center;
